# PhysicsEnforcedReservoirComputing

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: basic_RC_example.ipynb  hamiltonian.ipynb  heat_eq.ipynb  ks.ipynb  lotka_volterra.ipynb
src/perc/: ReservoirComputer.py  __init__.py  integrators.py  utils.py  vis.py
